--- a/NZWalks/NZWalks.API/appsettings.json
+++ b/NZWalks/NZWalks.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=localhost;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "NZWalksConnectionString": "Server=localhost;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "NZwalksAuthConnectionString": "Server=localhost;Database=NZwalksAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "aabbhhffkdhsgahsgdyshasgdhsdh1827457sgfs65sf8df4sd7",
