Create JWT Token in ASP.NET Core Web API

--- a/NZWalks/NZWalks.API/appsettings.json
+++ b/NZWalks/NZWalks.API/appsettings.json
@@ -12,6 +12,7 @@
   },
   "Jwt": {
     "Key": "aabbhhffkdhsgahsgdyshasgdhsdh1827457sgfs65sf8df4sd7",
-    "Issuer": ""
+    "Issuer": "https://localhost:7212/",
+    "Audience": "https://localhost:7212/"
   }
 }
